# Patra2

./: .gitignore  Patra.py  Patra2.py  README-md.fdb_latexmk  README-md.fls  README-md.tex  README.md  calibration.py  pyproject.toml  run-sample.sh  run.sh  test.py
outputs/Ba_dance_1/: Para0_Ba_dance_1_XY.csv  Para0_Ba_dance_1_Y_peak_Fourier.csv  Para0_Ba_dance_1_freq.csv  Para1_Ba_dance_1_XY.csv  Para1_Ba_dance_1_freq.csv
