[tool.poetry]
name = "patra"
version = "0.1.0"
description = ""
authors = ["jnishii <nishii@yamaguchi-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
